<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Karaokyo</string>
    <string name="title_activity_audio_picker">Attach Audio</string>
    <string name="title_activity_playlist_picker">Choose Playlist</string>
    <string name="title_activity_lyric_search">Find Lyrics</string>
    <string name="title_activity_lyric_display">View Lyric</string>
    <string name="title_activity_open_source">Open Source Licenses</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>

    <!--Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Dialogs -->
    <string name="new_playlist">New Playlist</string>
    <string name="rename_playlist">Rename Playlist</string>
    <string name="delete_playlist_confirm">Are you sure you want to delete this playlist?</string>
    <string name="delete_lyric_confirm">Are you sure you want to delete this lyric?</string>
    <string name="delete_song_confirm">Are you sure you want to delete this song?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Tab Names -->
    <string name="library">Library</string>
    <string name="lyrics">Lyrics</string>
    <string name="playlists">Playlists</string>
    <string name="now_playing">Now Playing</string>

    <!-- Options -->
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="attach_audio">Attach Audio</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="play">Play</string>
    <string name="remove">Remove</string>

    <!-- Lyric Search -->
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="uploader_label">Uploader:</string>
    <string name="rating_label">Rating:</string>
    <string name="description_label">Description:</string>
    <string name="search">Search</string>
    <string name="download">Download</string>
    <string name="view_in_browser">View In Browser</string>
    <string name="no_lyrics_found">No Lyrics Found</string>
    <string name="load_more_lyrics">Load more lyrics…</string>
    <string name="link_lyric">http://www.karaokyo.com/en/lyrics/</string>

    <!-- Now Playing -->
    <string name="timer_zero" translatable="false">0:00</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="pause">Pause</string>

    <!-- Empty -->
    <string name="empty_library">No songs found</string>
    <string name="empty_lyrics">No lyrics found</string>
    <string name="empty_playlists">No playlists found</string>

    <!-- Open Source -->
    <string name="apache2" translatable="false"><u>Apache 2.0</u></string>
    <string name="xerces" translatable="false"><u>\t\txerces-for-android</u></string>
    <string name="dslv" translatable="false"><u>\t\tdrag-sort-listview</u></string>
    <string name="color_picker" translatable="false"><u>\t\tandroid-color-picker</u></string>
    <string name="bypass" translatable="false"><u>\t\tBypass</u></string>
    <string name="mit" translatable="false">MIT</string>
    <string name="flag_icons" translatable="false"><u>\t\tflag-icons</u></string>
    <string name="jdom_lic" translatable="false"><u>JDOM License</u></string>
    <string name="jdom" translatable="false"><u>\t\tjdom</u></string>

    <!-- Toasts -->
    <string name="download_complete">Download Complete</string>
    <string name="download_failed">Download Failed</string>

    <!-- Errors -->
    <string name="error_no_songs_added">Please add songs to your playlist first!</string>
    <string name="error_playback">The audio file could not be played</string>
    <string name="error_attach_audio">The audio file could not be attached</string>
    <string name="error_missing_audio">The audio file has been deleted</string>
    <string name="error_lyric_has_invalid_timecode">The lyric data contains an invalid timecode</string>
    <string name="error_lyric_not_xml">The lyric file is corrupted</string>
    <string name="error_lyric_not_found">The lyric file has been deleted</string>
    <string name="error_playlist_name_exists">There is already a playlist with that name</string>
    <string name="error_playlist_name_empty">Name cannot be empty</string>
    <string name="error_unable_to_add_song">Unable to add song</string>
    <string name="error_no_connection">An Internet connection could not be established</string>
    <string name="error_server_down">The lyric lookup service could not be reached at this time. Please try again later.</string>
    <string name="error_malformed_json">There was an issue with the server response. Please try again later.</string>
    <string name="error_no_attached_audio">This lyric file does not have an audio file attached to it</string>

    <!-- A11y -->
    <string name="a11y_arrow">To</string>
    <string name="a11y_flag">Flag</string>
    <string name="a11y_close">Close</string>
    <string name="a11y_drag">Drag</string>
</resources>
