<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.karaokyo.android.app.player.activity.LyricSearchActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/title"
            android:hint="@string/title"
            android:singleLine="true"
            android:ellipsize="end"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/artist"
            android:hint="@string/artist"
            android:singleLine="true"
            android:ellipsize="end"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search"
            android:text="@string/search"/>
    </LinearLayout>
    <ListView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/listView"
        android:footerDividersEnabled="false"/>
    <fragment android:name="com.karaokyo.android.app.player.fragment.AdFragment"
        android:id="@+id/ad_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>