<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_gravity="center"
    android:padding="@dimen/widget_margin"
    android:background="#333">
    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:background="#389933ff"
        android:src="@drawable/ic_launcher"
        android:scaleType="fitCenter"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/thumbnail"
        android:layout_toEndOf="@id/thumbnail"
        android:ellipsize="end"
        android:singleLine="true"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:textColor="#fff"
        android:textAppearance="@style/NotificationTitle"
        tools:text="Title" />
    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_toRightOf="@id/thumbnail"
        android:layout_toEndOf="@id/thumbnail"
        android:ellipsize="end"
        android:singleLine="true"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:textColor="#fff"
        android:textAppearance="@style/NotificationSubtitle"
        tools:text="Artist" />
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/thumbnail"
        android:layout_toEndOf="@id/thumbnail"
        android:layout_below="@id/artist"
        android:divider="@null"
        android:dividerPadding="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:showDividers="middle" >
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/back"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back"
            style="@android:style/Widget.Holo.Button.Borderless" />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/play"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play"
            android:contentDescription="@string/play"
            style="@android:style/Widget.Holo.Button.Borderless" />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/forward"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_forward"
            android:contentDescription="@string/forward"
            style="@android:style/Widget.Holo.Button.Borderless" />
    </LinearLayout>
</RelativeLayout>