<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:dslv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.karaokyo.android.app.player.fragment.PlaylistFragment">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <com.mobeta.android.dslv.DragSortListView
            android:id="@+id/playlist"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:choiceMode="singleChoice"
            android:paddingBottom="90dp"
            android:clipToPadding="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:listSelector="@drawable/list_selector"
            dslv:drag_start_mode="onMove"
            dslv:drag_handle_id="@+id/handle" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:background="#B000">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttons"
            android:orientation="horizontal"
            android:divider="?android:listDivider"
            android:dividerPadding="5dp"
            android:gravity="center"
            android:showDividers="middle">
            <ImageButton
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:id="@+id/back"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_media_previous"
                android:contentDescription="@string/back"
                style="?android:attr/borderlessButtonStyle" />
            <ImageButton
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:id="@+id/play"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_media_play"
                android:contentDescription="@string/play"
                style="?android:attr/borderlessButtonStyle" />
            <ImageButton
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:id="@+id/forward"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_media_next"
                android:contentDescription="@string/forward"
                style="?android:attr/borderlessButtonStyle" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttons"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentTime"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/timer_zero"
                android:layout_centerInParent="true"
                android:textColor="#FFF"/>
            <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:layout_toRightOf="@+id/currentTime"
                android:layout_toEndOf="@+id/currentTime"
                android:layout_toLeftOf="@+id/totalTime"
                android:layout_toStartOf="@+id/totalTime"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalTime"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:text="@string/timer_zero"
                android:textColor="#FFF"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
